src/frontend/k8s/overlays/production/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "frontend-backend-config"}'
spec:
  type: ClusterIP
